[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-helpers"
version = "0.1.0"
description = "Scripts for managing GitHub releases with Concourse CI pipelines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mark Alston", email = "marktalston@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "requests>=2.25.0",
    "semver>=2.13.0",
    "pyyaml>=6.0",
    "ruff>=0.11.2",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pip-audit>=2.5.0",
]

[project.scripts]
create-release = "src.create_release:main"
delete-release = "src.delete_release:main"
rollback-release = "src.rollback_release:main"
update-params-release-tag = "src.update_params_release_tag:main"
demo-release-pipeline = "src.demo_release_pipeline:main"

[project.urls]
"Homepage" = "https://github.com/malston/pipeline-helpers"
"Bug Tracker" = "https://github.com/malston/pipeline-helpers/issues"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src/helpers"]
artifacts = ["src/*.py"]  # Include individual scripts

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
